# mdx

./: .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Readme.md
ci/: Dockerfile
include/mdx/: algorithms.hpp  arithmetic.hpp  constants.hpp  evaluate.hpp  expression.hpp  vector.hpp
tests/: CMakeLists.txt  arithmetic_test.cpp  constants_test.cpp  vector_test.cpp
